--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>hello coursera students</title>
+    <title>hello coursera gaga blag blag</title>
 </head>
 
 <body>
